Add some html code and css styles to the pages

--- a/about.html
+++ b/about.html
@@ -16,6 +16,26 @@
 </head>
 <body>
   <header>
+    <div class="container-fluid deskto-top-nav">
+      <div class="social-media-div">
+        <ul class="social-media">
+          <li class="">
+            <a href="" class="social-media-item"><i class="fa-brands fa-facebook-f"></i></a>
+          </li>
+          <li class=""><a href="#" class="social-media-item"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">English</a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">Mypage</a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <nav class="navbar">
       <div class="logo"><a href="./index.html"><img src="img/foursquare-logo.png" alt="Foursquare Gospel Church Logo"></a></div>
       <ul class="nav-menu">
@@ -35,7 +55,7 @@
     <div class="about-us">
       <p class="theme">"Supernatural Encounter"</p>
       <h1>FOURSQUARE ANNUAL <br> CONVENTION 2023 <br> NAMIBIA</h1>
-      <p>At every convetion, we enjoy fellowship with other fellow believers from different parts of the world.
+      <p class="about-us-description">At every convetion, we enjoy fellowship with other fellow believers from different parts of the world.
         This is an event not to be missed. Come experience God's supernatural power. Our overseer pastor Festus 
         Negumbo and many other Ministers of God will be ministering.
       </p>
@@ -72,9 +92,9 @@
       </div>
     </div>
   </section>
-  <footer>
+  <footer class="about-us-footer">
     <div class="logo2"><a href="./index.html"><img src="img/foursquare-logo.png" alt="Foursquare Gospel Church Logo"></a></div>
-    <p>Foursquare Annual Convention Namibia. No Rights Reserved.</p>
+    <p>2023 Foursquare Annual Convention Namibia. No Rights Reserved.</p>
   </footer>
 </body>
 </html>
