--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 </head>
 <body>
   <header>
+    <div class="container-fluid deskto-top-nav">
+      <div class="social-media-div">
+        <ul class="social-media">
+          <li class="">
+            <a href="" class="social-media-item"><i class="fa-brands fa-facebook-f"></i></a>
+          </li>
+          <li class=""><a href="#" class="social-media-item"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">English</a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">Mypage</a>
+          </li>
+          <li class="">
+            <a href="#" class="social-media-item">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <nav class="navbar">
       <div class="logo"><a href="./index.html"><img src="img/foursquare-logo.png" alt="Foursquare Gospel Church Logo"></a></div>
       <ul class="nav-menu">
@@ -22,6 +42,7 @@
         <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="">Register</a></li>
+        <li class="nav-item convention-link"><a class="foursq-btn" href="#"><button>4sq convetion</button></a></li>
       </ul>
       <div class="hamburger">
         <span class="bar"></span>
@@ -29,6 +50,7 @@
         <span class="bar"></span>
       </div>
     </nav>
+    
   </header>
   <section class="home">
   
@@ -69,7 +91,7 @@
         <div class="card">
           <i class="fa-solid fa-share-from-square fa-3x"></i>
           <h3>Testimonies</h3>
-          <p>Time to share what the Lord has done for you.</p>
+          <p>Time to share what the Lord has done for you or your family.</p>
         </div>
         <div class="card">
           <i class="fa-solid fa-people-roof fa-3x"></i>
@@ -77,8 +99,10 @@
           <p>Time to hear what God has prepared for you.</p>
         </div>
       </div>
-      <div class="d-flex">
+      <div class="d-flex-btn d-flex">
         <button class="btn text-2xl text-bold">Join our annual convention 2023</button>
+        <!-- button for desktop version -->
+        <button class="desktop-btn text-2xl text-bold">SEE THE WHOLE PROGRAM</button>
       </div>
     </div>
   </section>
@@ -89,7 +113,24 @@
     <ul class="speakers-list">
         
     </ul>
-    <div class="sm:hidden mt-40 border-2 border-zinc-800 px-12 py-2"><button class="more-btn text-xl font-semibold" onclick="HideSpeakers()">More Speakers</button></div>
-</section>
+    <div class="hide-speakers"><button class="hide-speaker-btn">MORE</button></div>
+  </section>
+
+  <!-- For Desktop version only -->
+  <section id="partners" class="desktop-partners">
+    <div class="partners">
+      <h3>Partners</h3>
+      <div class="partners-div">
+        <div class="partner-logo"><a href=""><img src="img/joy-bringers-logo.jfif" alt="Joy Bringers Logo"></a></div>
+        <div class="partner-logo"><a href=""><img src="img/cocacola-logo.png" alt="Joy Bringers Logo"></a></div>
+        <div class="partner-logo"><a href=""><img src="img/joy-bringers-logo2.png" alt="Joy Bringers Logo"></a></div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="desktop-footer">
+    <div class="logo2"><a href="./index.html"><img src="img/foursquare-logo.png" alt="Foursquare Gospel Church Logo"></a></div>
+    <p>2023 Foursquare Annual Convention Namibia. No Rights Reserved.</p>
+  </footer>
 </body>
 </html>
