Add more cards and speakers

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
           <h3>Sermon</h3>
           <p>Time to hear what God has prepared for you.</p>
         </div>
+        <div class="card">
+          <i class="fa-solid fa-people-roof fa-3x"></i>
+          <h3>Altar Call</h3>
+          <p>Time to give your life to Jesus and make Him your saviour.</p>
+        </div>
       </div>
       <div class="d-flex-btn d-flex">
         <button class="btn text-2xl text-bold">Join our annual convention 2023</button>
