Add outer div to past conventions to display horizontally

--- a/about.html
+++ b/about.html
@@ -71,15 +71,17 @@
     <div class="past-projects">
       <h4>See the past annual convetions</h4>
       <p>Take a look at the last two Foursquare Annual convetions which took place in Namibia.</p>
-      <div class="convention-1">
-        <h3>2018</h3>
-        <p>Foursquare Annual convention 2018 in Namibia</p>
+      <div class="past-conventions">
+        <div class="convention-1">
+          <h3>2018</h3>
+          <p>Foursquare Annual convention 2018 in Namibia</p>
+        </div>
+        <div class="convention-2">
+          <h3>2019</h3>
+          <p>Foursquare Annual convention 2019 in Namibia</p>
+        </div>
       </div>
-      <div class="convention-2">
-        <h3>2019</h3>
-        <p>Foursquare Annual convention 2019 in Namibia</p>
       </div>
-    </div>
   </section>
 
   <section id="partners">
